[gd_scene load_steps=3 format=3 uid="uid://d06kqaajyk42e"]

[ext_resource type="Script" path="res://hud.gd" id="1_50ixx"]
[ext_resource type="Theme" uid="uid://d015dkwpp3j3f" path="res://main_menu.tres" id="1_njws4"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_50ixx")

[node name="StartGame" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -80.0
offset_right = 48.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_njws4")
text = "Start Game"

[node name="QuitGame" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = 20.0
offset_right = 46.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_njws4")
text = "Quit Game"

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -58.5
offset_right = 58.5
offset_bottom = 26.0
grow_horizontal = 2
text = "Space Invaders"

[node name="Score" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0

[connection signal="pressed" from="StartGame" to="." method="_start_game"]
[connection signal="pressed" from="QuitGame" to="." method="_quit_game"]
